acm/odh-edge/apps/model-deploy/Network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-all
  namespace: openshift-gitops
spec:
  podSelector: {}          # seleziona tutti i pod del namespace
  policyTypes:
  - Ingress                # blocca il traffico in ingresso
  - Egress                 # blocca il traffico in uscita
  ingress: []              # nessuna regola → blocco totale in ingresso
  egress: []               # nessuna regola → blocco totale in uscita
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-all
  namespace: open-cluster-management-agent
spec:
  podSelector: {}          # seleziona tutti i pod del namespace
  policyTypes:
  - Ingress                # blocca il traffico in ingresso
  - Egress                 # blocca il traffico in uscita
  ingress: []              # nessuna regola → blocco totale in ingresso
  egress: []               # nessuna regola → blocco totale in uscita
